* https://github.com/ysb33r/gradleTest/issues/5[#5] - Allow tests to be executed in parallel
* https://github.com/ysb33r/gradleTest/issues/52[#52] - Allow for expected failure cases
* https://github.com/ysb33r/gradleTest/issues/54[#54] - Added base plugin `org.ysb33r.gradletest.base`.
* https://github.com/ysb33r/gradleTest/issues/62[#62] - Propagate `--rerun-tasks` down to test instances.

=== Bugs

* https://github.com/ysb33r/gradleTest/issues/26[#26] - Unable to build gradleTest project with Gradle 2.1+.
* https://github.com/ysb33r/gradleTest/issues/34[#34] - Distribution URI fails with File paths under Windows.
* https://github.com/ysb33r/gradleTest/issues/35[#35] - TestGenerator is not correctly substituting paths in
   initscript under Windows.
* https://github.com/ysb33r/gradleTest/issues/38[#38] - TestGenerator is not correctly substituting paths in
   generated test source code under Windows.
* https://github.com/ysb33r/gradleTest/issues/41[#41] - `gradleTest` configuration is broken.
* https://github.com/ysb33r/gradleTest/issues/42[#42] - `GradleTest` HTML reports should not overwrite over Test
  task reports.
* https://github.com/ysb33r/gradleTest/issues/45[#45] - When there is no `src/gradleTest` the build fails.
* https://github.com/ysb33r/gradleTest/issues/46[#46] - When folders below `src/gradleTest` contain non-word characters,
  compilation of test classes fails.
* https://github.com/ysb33r/gradleTest/issues/47[#47] - Classpath not correctly resolved under test.
* https://github.com/ysb33r/gradleTest/issues/48[#48] - When copying gradleTest folders maintain same permissions
* https://github.com/ysb33r/gradleTest/issues/49[#49] - When folders below `gradleTest` are removed, generated code
  should be removed too.
* https://github.com/ysb33r/gradleTest/issues/53[#53] - Skip test generation if `src/gradleTest` does not exist.
* https://github.com/ysb33r/gradleTest/issues/57[#57] - Transitive dependencies for pluginsare not injected into classpath.