@@ -1,6 +1,6 @@
-= Compatibility with Other Plugins
+== Compatibility with Other Plugins
 
-== License plugin
+=== License plugin
 
 The https://github.com/hierynomus/license-gradle-plugin[License plugin] is a really useful plugin to help with
 maintenance of license headers in source code. One standard feature of this plugin is to scan all source sets
