@@ -11,8 +11,6 @@ that can directly be used in documentation.
 
 NOTE: *If you are using a Gradle version < 2.13, it will run in legacy mode and behave like the 0.5.5 version of the plugin*.
 
-= Testkit Mode (Gradle 2.13+)
-
 include::parts/bootstrap.adoc[]
 
 include::parts/structure.adoc[]
@@ -29,8 +27,11 @@ include::parts/known-limitations.adoc[]
 
 include::parts/upgrading.adoc[]
 
-include::parts/legacy-mode.adoc[]
-
 include::parts/other-plugins.adoc[]
 
 include::parts/alternatives.adoc[]
+
+include::parts/legacy-mode.adoc[]
+
+include::parts/gradle-runner.adoc[]
+
